apps/cepapi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cepapi-ingress
  labels:
    app: cepapi
  annotations:
    kubernetes.io/ingress.class: kong
    #konghq.com/plugins: rate-limiting, custom-plugin
    konghq.com/preserve-host: "true"
    konghq.com/methods: GET

spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /cep
        pathType: Prefix
        backend:
          service:
            name: cepapi-service
            port:
              number: 5000
